minor alignment fix

--- a/paw2018b/frontend/src/css/Publication.css
+++ b/paw2018b/frontend/src/css/Publication.css
@@ -92,7 +92,7 @@
 }
 
 #address {
-	padding-left: 10px !important;
+	padding-left: 15px !important;
 }
 
 .column-1 {
